# btk_hackathon_2026

./: -w  .env.example  .gitignore  E2E_SMOKE_TEST.md  README.md  SUBMISSION.md  docker-compose.yml  supabase_migration_platform_connections.sql
backend/: .dockerignore  Dockerfile  pyproject.toml  seed_demo.py
backend/alembic/: env.py
backend/alembic/versions/: b8e88b4ebf48_initial_schema.py
backend/app/: config.py  main.py
backend/app/agents/: competitor_watcher.py  listing_agent.py  pricing_agent.py
backend/app/api/: agents.py  analytics.py  auth.py  connections.py  demo.py  me.py  pricing.py  products.py  simulator.py
backend/app/core/: deps.py  gemini_client.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/integrations/: _http_base.py  base.py  mock_amazon.py  mock_own_site.py  mock_trendyol.py  schemas.py
backend/app/schemas/: auth.py  products.py
backend/app/services/: email.py
backend/tests/: test_competitor_watcher.py  test_integrations_roundtrip.py  test_listing_agent.py  test_pricing_agent.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: auth.ts  middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: actions.ts  layout.tsx
frontend/src/app/connections/: _client.tsx  page.tsx
frontend/src/app/dashboard/: DashboardClient.tsx  page.tsx
frontend/src/app/logs/: LogsClient.tsx  page.tsx
frontend/src/app/plan/: page.tsx
frontend/src/components/: InsightsCard.tsx  logo.tsx  mobile-nav.tsx  sidebar.tsx
frontend/src/lib/: api.ts
mock_services/amazon/: .dockerignore  Dockerfile  README.md  main.py  models.py  pyproject.toml  smoke_test.py
mock_services/combined/: main.py  pyproject.toml
mock_services/own_site/: Dockerfile  README.md  main.py  models.py  pyproject.toml  smoke_test.py
mock_services/trendyol/: Dockerfile  README.md  main.py  models.py  pyproject.toml  smoke_test.py
scripts/: run-mocks.ps1
(+26 files in other folders)
