[project]
name = "optiprice-backend"
version = "0.1.0"
description = "OptiPrice AI — FastAPI core API, pricing & listing agents"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "bcrypt>=4.2",
    "python-multipart>=0.0.12",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "structlog>=24.4",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
