[project]
name = "mock-platforms"
version = "0.1.0"
description = "Combined mock platform services (Trendyol + Amazon + OwnSite) for OptiPrice AI."
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "pydantic>=2.9",
]

[tool.uv]
package = false
