[project]
name = "mock-trendyol"
version = "0.1.0"
description = "Mock Trendyol seller API for OptiPrice AI hackathon."
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "pydantic>=2.9",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
